--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
-Alexis Teter
+<body>
 
+<h1>Alexis Teter</h1>
+
+<p>I’m a current Master’s student in Applied Mathematics at UC Santa Cruz.  I have a B.S. in Applied Mathematics, with a specialization in computing, from UCLA  </p>
+
+</body>
 
