--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 
-<h1>Alexis Teter</h1>
+Alexis Teter
 
-<p>I’m a current Master’s student in Applied Mathematics at UC Santa Cruz.  I have a B.S. in Applied Mathematics, with a specialization in computing, from UCLA  </p>
+I’m a current Master’s student in Applied Mathematics at UC Santa Cruz.  I have a B.S. in Applied Mathematics, with a specialization in computing, from UCLA
